[package]
name = "vgos"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "vgos"
path = "src/main.rs"
test = false

[dependencies]
limine = "0.6.3"
font8x8 = { version = "0.3.1", default-features = false, features = ["unicode"] }
spin = { version = "0.12.0", default-features = false, features = ["mutex", "spin_mutex", "lazy"] }
linked_list_allocator = "0.10.6"
x86_64 = { version = "0.15.4", default-features = false, features = ["instructions", "abi_x86_interrupt"] }
pic8259 = "0.11.0"
