[package]
name = "vgos"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "vgos"
path = "src/main.rs"
test = false

[dependencies]
limine = "0.6.5"
font8x8 = { version = "0.3.1", default-features = false, features = ["unicode"] }
spin = { version = "0.12.0", default-features = false, features = ["mutex", "spin_mutex", "lazy"] }
